--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* import new font from google front : https://fonts.google.com */
+/* import new font from google fronts : https://fonts.google.com */
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 
 /* CSS variables : https://developer.mozilla.org/en-US/docs/Web/CSS/Using_CSS_custom_properties */
